# krakenpy

./: README.md  pyproject.toml  setup.py
kraken_utils/: __init__.py  assignment.py  report.py
krakenpy/: __init__.py  __main__.py  assignment.py  merge.py  report.py  taxonomy.py
krakenpy/subcommands/: __init__.py  merge.py
pykraken/: __init__.py
tests/: test_assignment.py  test_merge.py  test_report.py  test_taxonomy.py
tests/data/paired/: Viral.kraken_report.corrupt.txt  Viral.kraken_report.no_header.txt  Viral.kraken_report.no_header2.txt  Viral.kraken_report.truncated.txt  Viral.kraken_report.txt  additional.kraken_assignments.tsv  expected_small_and_additional.kraken_assignments.tsv  small.kraken_assignments.edited.tsv  small.kraken_assignments.tsv
tests/data/reclassify_everything/: PlusPF-8.kraken_assignments.tsv  PlusPF-8.kraken_report.txt  Viral.kraken_assignments.tsv  Viral.kraken_report.txt  expected.kraken_assignments.tsv  expected.kraken_report.txt  expected_reversed.kraken_assignments.tsv  expected_reversed.kraken_report.txt
tests/data/taxid_1003835/: PlusPF-8.kraken_assignments.tsv  PlusPF-8.kraken_report.clean.txt  PlusPF-8.kraken_report.txt  Viral.kraken_assignments.tsv  Viral.kraken_report.txt  merged.kraken_assignments.tsv  merged_inverted.kraken_assignments.tsv  merged_inverted.kraken_report.txt
tests/data/taxid_630/: PlusPF-8.kraken_report.edited.txt  PlusPF-8.kraken_report.extra.txt  PlusPF-8.kraken_report.txt  Viral.kraken_assignments.tsv  Viral.kraken_report.txt  expected_PlusPF-8.source_target.csv  merged_inverted.kraken_report.txt  (+3 more)
(+3 files in other folders)
