[project]
name = "kraken_utils"
version = "1.0.0"
authors = [
  { name="Rachel Colquhoun", email="rachel.colquhoun@ed.ac.uk" },
]
description = "Utility functions for parsing kraken assignment and report files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rmcolq/pykraken"
Issues = "https://github.com/rmcolq/pykraken/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
